@@ -2,6 +2,7 @@
  * @brief LatLongDistanceKeyMaker implementation.
  */
 /* Copyright 2008 Lemur Consulting Ltd
+ * Copyright 2011 Richard Boulton
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
