@@ -1,3 +1,7 @@
+Tue Oct 18 22:57:41 GMT 2011  Richard Boulton <richard@tartarus.org>
+
+	* geospatial/: Update copyright statements.
+
 Tue Oct 18 22:48:29 GMT 2011  Richard Boulton <richard@tartarus.org>
 
 	* geospatial/: Change coordinate unserialisation functions to be
